List-style fix on IE 11

--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,7 @@ header {
     align-items: center;
     height: 40px;
     border: none;
+    margin-left: 20px;
     background-color: #000000;
     font-size: 13px;
     cursor: pointer;
@@ -259,6 +260,7 @@ header {
     display: none;
     position: absolute;
     list-style: none;
+    list-style-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
     padding-left: 30px;
     z-index: 1;
     top: 65px;
